feat(Warm transfer): initial implementation of warm transfer

--- a/public/template.html
+++ b/public/template.html
@@ -93,6 +93,11 @@
                 />
               </div>
             </div>
+
+            <label class="checkbox">
+              <input id="warmOption" type="checkbox">
+              Warm Transfer
+            </label>
           </div>
         </div>
       </div>
