feat(Incoming transfer): control if receiver had track

--- a/public/template.html
+++ b/public/template.html
@@ -95,7 +95,7 @@
             </div>
 
             <label class="checkbox">
-              <input id="warmOption" type="checkbox">
+              <input id="warmOption" type="checkbox" />
               Warm Transfer
             </label>
           </div>
