feat(DTMF): succesfully implemented DTMF with default audio, configurable later

--- a/public/template.html
+++ b/public/template.html
@@ -121,6 +121,30 @@
           </article>
         </div>
       </div>
+
+      <div class="dtmf">DTMF sent: <span id="dtmf"></span></div>
+      <div>
+        <div>
+          <button class="keypad" disabled>1</button>
+          <button class="keypad" disabled>2</button>
+          <button class="keypad" disabled>3</button>
+        </div>
+        <div>
+          <button class="keypad" disabled>4</button>
+          <button class="keypad" disabled>5</button>
+          <button class="keypad" disabled>6</button>
+        </div>
+        <div>
+          <button class="keypad" disabled>7</button>
+          <button class="keypad" disabled>8</button>
+          <button class="keypad" disabled>9</button>
+        </div>
+        <div>
+          <button class="keypad" disabled>*</button>
+          <button class="keypad" disabled>0</button>
+          <button class="keypad" disabled>#</button>
+        </div>
+      </div>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
