feat(Devices): set more utils methods for devices

--- a/public/template.html
+++ b/public/template.html
@@ -117,7 +117,8 @@
         <div class="tile is-parent">
           <article class="tile is-child notification is-info">
             <p class="title">Toky JS SDK Demo</p>
-            <!-- <p class="subtitle">With an image</p> -->
+            <p id="input-device-sub" class="subtitle"></p>
+            <p id="output-device-sub" class="subtitle"></p>
           </article>
         </div>
       </div>
