feat(Access Token): replace API key for access token

--- a/public/template.html
+++ b/public/template.html
@@ -53,10 +53,10 @@
           </div>
 
           <div class="field has-addons">
-            <label for="apiKey" class="label">Toky API key:</label>
+            <label for="accessToken" class="label">Toky API key:</label>
             <div class="control is-expanded">
               <input
-                id="apiKey"
+                id="accessToken"
                 class="input is-small"
                 type="password"
                 placeholder="XXXX"
