feat: support for cancel transfer

--- a/public/template.html
+++ b/public/template.html
@@ -39,6 +39,9 @@
           <button class="button is-small" id="transfer" disabled>
             Make transfer
           </button>
+          <button class="button is-small" id="cancelTransfer" disabled>
+            Cancel transfer
+          </button>
 
           <div class="field">
             <label for="agent" class="label">Agent:</label>
