feat: update example template

--- a/public/template.html
+++ b/public/template.html
@@ -55,7 +55,7 @@
           </div>
 
           <div class="field has-addons">
-            <label for="accessToken" class="label">Toky API key:</label>
+            <label for="accessToken" class="label">Access Token:</label>
             <div class="control is-expanded">
               <input
                 id="accessToken"
