feat: update and improve example

--- a/example/template.html
+++ b/example/template.html
@@ -116,8 +116,9 @@
         </div>
 
         <div class="tile is-parent">
-          <article class="tile is-child notification is-info">
+          <article id="general-article" class="tile is-child notification is-info">
             <p class="title">Toky JS SDK Demo</p>
+            <p id="general-message" class="subtitle"></p>
             <p id="input-device-sub" class="subtitle"></p>
             <p id="output-device-sub" class="subtitle"></p>
           </article>
