Updated the example to add the name of the caller on the example dashboard

--- a/example/template.html
+++ b/example/template.html
@@ -280,6 +280,10 @@
                   <strong>Caller ID:</strong>
                   <span id="inbound-call-id">*</span>
                 </li>
+                <li>
+                  <strong>Caller Name:</strong>
+                  <span id="inbound-call-caller-name">*</span>
+                </li>
                 <li id="inbound-call-contact-name-line" style="display: none;">
                   <strong>Contact name:</strong>
                   <span id="inbound-call-contact-name">*</span>
